--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 								<article>
 									<header>
 
-										<h2><a>IMDb – Data Warehousing, ETL, Data Analysis & BI Intelligence  
+										<h2><a>IMDb – Data Warehousing, ETL, Data Analysis & BI  
 										</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/man.jpg" alt="" /></a>
