--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
-									<span class="date">August 4, 2020</span>
+									<span class="date">September, 2021</span>
 									<h2><a href="#">Hi! I'm Aditya Salunkhe<br />
 								</a></h2>
-								<h3>Master of Science, Information Systems| Bachelor of Engineering, Information Technology</h3> 
+								<h3>MS, Information Systems| B.Tech, Information Technology</h3> 
 									<p>24| Indian| Data & Business Analytics| Data Science| Business Intelligence| Machine Learning | Deep Learning| Database |DataWarehouse| ETL Developer </p>
 								</header>
 								
